# matbench-discovery

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  changelog.md  citation.cff  contributing.md  justfile  pyproject.toml  readme.md  setup.cfg  setup.py
.github/: payload-generator-paths.regex  pull_request_template.md  release.yml
.github/PULL_REQUEST_TEMPLATE/: model_submission.md
.github/workflows/: gh-pages.yml  link-check.yml  lint.yml  model-pr-guard.yml  release.yml  run-scripts.yml  slow-tests.yml  stale.yml  test-scripts.yml  test.yml  update-site-figs.yml
data/: data-files.yml  datasets.yml  pmg_structs_to_ase_extxyz.py  readme.md  training-sets.yml
data/2022-06-11-from-rhys/: data-describe.md  describe_data_files.py  process_wbm_cleaned.py  readme.md
data/figshare/: 1.0.0.json  readme.md
data/flying-atom/: make_flying_atom_structs_111_plane.py
data/m3gnet-mp-2021-training-set/: extract_final_energy_and_structure.py  readme.md
data/m3gnet-mp-training-data/: fetch_process_m3gnet_trainset.py  readme.md
data/mp/: 2022-09-19-mp-elemental-reference-entries.json  2023-02-07-mp-elemental-reference-entries.json  build_phase_diagram.py  eda_mp_trj.py  get_mp_energies.py  get_mp_traj.py  plot-mptrj-statistics.py
data/phonons/: phonondb_103_pbe_eda.py
data/wbm/: 2022-12-07-hist-e-form-per-atom.svelte  analysis.py  compare_cse_vs_ce_mp_2020_corrections.py  compile_wbm_test_set.py  eda.py  eda_wbm.py  fetch_process_wbm_dataset.py  readme.md
figures/: 2022-12-05-precision-recall-curves.svelte  2022-12-25-precision-recall-curves.svelte
matbench_discovery/: __init__.py  ase_relax.py  build_phase_diagram.py  calculators.py  cli.py  data-files.yml  data.py  data_figs.py  diatomics.py  discovery.py  energy.py  enums.py  figs.py  figshare.py  geo-opt-files.yml  hpc.py  load_preds.py  md.py  md_models.py  metrics-which-is-better.yml  metrics.py  modeling-tasks.yml  models.py  plots.py  preds.py  runner_cli.py  slurm.py  structure.py  trajectory.py
matbench_discovery/figshare/: 1.0.0.json  readme.md
matbench_discovery/metrics/: __init__.py  discovery.py  geo_opt.py  md-metrics-design.md  md.py  md_metrics_design.md  phonons.py
matbench_discovery/phonons/: __init__.py  calc_kappa.py  pipeline.py  schema.py  thermal_conductivity.py
matbench_discovery/plot_scripts/: __init__.py  all_models_scatter.py  hist_classified_stable_as_func_of_hull_dist.py  hist_classified_stable_as_func_of_hull_dist_batches.py  hist_classified_stable_vs_hull_dist.py  hist_classified_stable_vs_hull_dist_batches.py  moving_hull_dist_mae_compare_models.py  precision_recall.py  precision_recall_vs_calc_count.py  readme.md  rolling_mae_vs_hull_dist.py  rolling_mae_vs_hull_dist_wbm_batches.py  rollng_mae_vs_hull_dist_all_models.py
matbench_discovery/preds/: __init__.py  discovery.py  geo_opt.py
matbench_discovery/remote/: fetch.py  figshare.py
matbench_discovery/structure/: __init__.py  prototype.py  symmetry.py
mb_discovery/: __init__.py  build_phase_diagram.py  compute_formation_energy.py  energy.py  plots.py  slurm.py
mb_discovery/energy/: __init__.py  join_slurm_array_results.py  slurm_e_above_hull.py
mb_discovery/m3gnet/: eda_wbm_pre_vs_post_m3gnet_relaxation.py  join_and_plot_m3gnet_relax_results.py  slurm_array_m3gnet_relax_wbm.py
mb_discovery/plot_scripts/: __init__.py  hist_classification_as_func_of_hull_dist.py  hist_classified_stable_as_func_of_hull_dist.py  hist_classified_stable_as_func_of_hull_dist_batches.py  moving_hull_dist_mae.py  moving_hull_dist_mae_compare_models.py  moving_hull_dist_mae_wbm_batches.py  plot_funcs.py  precision_recall_as_func_of_calc_count.py  precision_recall_vs_calc_count.py  (+2 more)
ml_stability/: __init__.py  eda.py  hist_clf.py  hist_clf_vary.py  moving-mae-batch.py  moving-mae-compare.py  moving-mae-multi.py  wbm_pre_vs_post_m3gnet_relaxation.py
models/: run_diatomics.py  run_discovery.py  run_kappa.py  run_md.py
models/equflash/kappa-env/: pyproject.toml
paper/: matbench-discovery-v1.typ  references.bib  template.typ
scripts/: __init__.py  all_model_parity_plots_traces.py  all_models_scatter.py  analyze_element_errors.py  analyze_elements.py  analyze_failure_cases.py  analyze_geo_opt.py  analyze_model_disagreement.py  analyze_model_failure_cases.py  apply_pr_models_overlay.py  calc_model_run_times.py  calc_wandb_model_runtimes.py  compile_metrics.py  compute_projections.py  compute_struct_fingerprints.py  ctk_structure_viewer.py  cumulative_clf_metrics.py  cumulative_metrics.py  difficult_structures.py  download_model_preds_from_figshare.py  e_above_hull_scatter_models.py  export_data_fig_payloads.py  generate_model_enum.py  hist_classified_stable_vs_hull_dist.py  hist_classified_stable_vs_hull_dist_batches.py  hist_classified_stable_vs_hull_dist_models.py  ingest_model.py  make_api_docs.py  make_hull_dist_box_plot.py  make_metrics_tables.py  material_space-requirements.txt  material_space.py  md_convert_references_to_hdf5.py  metrics-which-is-better.json  metrics-which-is-better.yml  metrics_table.py  ml_relaxed_struct_analysis.py  per_element_errors.py  prc_roc_curves_models.py  precision_recall.py  (+19 more)
site/: .eslintrc.yml  .gitignore  deno.jsonc  eslint.config.js  package.json  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts
tests/: __init__.py  conftest.py  dataset-schema.yml  label-schema.yml  model-metadata-schema.json  model-metadata-schema.yaml  model-metadata-schema.yml  model-schema.yml  modeling-tasks-schema.yml  test_apply_pr_models_overlay.py  test_cli.py  test_data.py  test_data_figs.py  test_diatomics.py  test_discovery.py  test_energy.py  test_enums.py  test_fig_payloads.py  test_figs.py  test_figshare.py  test_hpc.py  test_ingest_model.py  test_init.py  test_load_preds.py  test_md.py  test_metrics.py  test_models.py  test_parity_assets.py  test_plot_funcs.py  test_plots.py  test_plots_scripts.py  test_preds.py  test_slurm.py  test_structure.py  test_summarize_payload_changes.py  test_trajectory.py  test_url_skips.py  training-set-schema.yml  url-skip-registry.yml  utils.py
(+1308 files in other folders)
