[project]
name = "matbench-discovery"
version = "1.3.1"
description = "A benchmark for machine learning models on inorganic crystal"
authors = [{ name = "Janosh Riebesell", email = "janosh.riebesell@gmail.com" }]
readme = "readme.md"
license = { file = "license" }
keywords = [
  "force field",
  "geometry optimization",
  "high-throughput crystal structure stability prediction",
  "interatomic potential",
  "lattice vibrations",
  "machine learning",
  "materials discovery",
  "phonons",
  "thermal conductivity",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
  "ase>=3.25",
  "numpy>=1.26",
  "pandas>=2.2.2",
  "plotly>=6.3",
  "pymatgen>=2024.8.9",
  # strict pin on pymatviz due to https://github.com/janosh/matbench-discovery/issues/209
  "pymatviz[df-pdf-export,df-svg-export]==0.17.1",
  "ruamel.yaml>=0.18.6",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "tqdm>=4.67",
  "wandb>=0.19",
]

[project.urls]
Homepage = "https://janosh.github.io/matbench-discovery"
Repo = "https://github.com/janosh/matbench-discovery"
Package = "https://pypi.org/project/matbench-discovery"

[project.optional-dependencies]
test = ["matbench-discovery[phonons]", "pytest-cov>=5", "pytest>=8.1"]
# how to specify git deps: https://stackoverflow.com/a/73572379
running-models = [
  # aviary commented-out since dep on git repo raises "Invalid value for requires_dist"
  # when attempting PyPI publish
  # "aviary@git+https://github.com/CompRhys/aviary",
  "alignn>=2024.1.14",
  "chgnet>=0.3.0",
  "jarvis-tools",
  "m3gnet>=0.2.4",
  "mace-torch>=0.3.6",
  "maml>=2023.9.9",
  "megnet>=1.3.2",
]
3d-structures = ["crystal-toolkit>=2024.10.22"]
plots = ["dash>=2.18"]
fetch-wbm-data = ["gdown>=5.2"]
make-wbm-umap = ["umap-learn>=0.5.5"]
symmetry = ["moyopy>=0.3.4"]
phonons = ["phono3py>=3.12", "phonopy>=2.35"]

[build-system]
requires = ["uv_build>=0.7.5"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "matbench_discovery"
module-root = ""
source-include = ["matbench_discovery/**/*.yml", "models/**/*.yml"]

[tool.ruff]
target-version = "py311"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "BLE001",
  "C408",    # unnecessary-collection-call
  "C901",
  "COM812",
  "D205",    # blank-line-after-summary
  "E731",    # lambda-assignment
  "EM101",
  "EM102",
  "FIX002",
  "G004",    # logging uses f-string
  "INP001",
  "ISC001",
  "N806",    # non-lowercase-variable-in-function
  "PERF203", # try-except-in-loop
  "PLC0414", # useless-import-alias
  "PLC0415",
  "PLR",     # pylint refactor
  "PLW2901", # redefined-loop-name
  "PT006",   # pytest-parametrize-names-wrong-type
  "PTH",
  "S108",
  "S112",    # try/except continue: consider logging the exception
  "S310",
  "S311",
  "S603",    # subprocess-without-shell-equals-true
  "S607",    # start-process-with-partial-path
  "T201",
  "TD",
  "TRY003",
  "TRY301",
]
pydocstyle.convention = "google"
isort.split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "FBT001", "FBT002", "S101"]
"matbench_discovery/plots.py" = ["ERA001"]    # allow commented out code
"scripts/*" = ["D", "ERA001"]
"models/*" = ["D", "ERA001"]
"data/*" = ["ERA001", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:warnings -m 'not slow'"
markers = [
  "slow: tests marked slow are skipped by default (unskip with pytest -m slow)",
]

[tool.codespell]
ignore-words-list = "nd,te,fpr,matris,titel"

[[tool.ty.overrides]]
include = ["models/**/test_*.py", "models/**/train_*.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[dependency-groups]
dev = ["prek>=0.2.2", "ty>=0.0.1a19"]
