[project]
name = "matbench-discovery-equflash-kappa"
version = "0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matbench-discovery[phonons,symmetry]",
  "GGNN @ git+https://github.com/SamsungDS/GGNN@16b5cae47437",
  "fairchem-core==1.10.0",
  "cuequivariance==0.6.0",
  "cuequivariance-ops-torch-cu12==0.6.0",
  "cuequivariance-torch==0.6.0",
  "e3nn==0.5.6",
  "torch==2.9.1+cu126",
  "torch-geometric==2.6.1",
  "torch-scatter==2.1.2+pt29cu126",
  "torch-sparse==0.6.18+pt29cu126",
  "ase-db-backends==0.11.0",
  "nvalchemi-toolkit-ops==0.3.0",
  "numba==0.65.1",
  "hydra-core==1.3.3",
  "lmdb==1.6.2",
  "pydantic==2.13.4",
  "spglib==2.6.0",
  "torchtnt==0.2.4",
  "submitit==1.5.3",
  "huggingface-hub==1.19.0",
  "numpy>=2,<2.5",
  "pandas<4",
  "scipy==1.16.1",
  "pymatgen>=2026.5.4",
]

[tool.uv]
package = false
find-links = ["https://data.pyg.org/whl/torch-2.9.1+cu126.html"]
override-dependencies = [
  "numpy>=2,<2.5",
  "scipy==1.16.1",
  "torch==2.9.1+cu126",
]

[tool.uv.sources]
matbench-discovery = { path = "../../..", editable = true }
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
